kubernetees/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend-deployment
  namespace: movie-ticket

spec:
  replicas: 1

  selector:
    matchLabels:
      app: movie-backend

  template:
    metadata:
      labels:
        app: movie-backend

    spec:
      containers:
      - name: movie-backend

        image: 703621194250.dkr.ecr.ap-south-1.amazonaws.com/movie-backend:v1
        imagePullPolicy: Always

        ports:
        - containerPort: 5000

        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"

        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3

        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 20
          periodSeconds: 15
          timeoutSeconds: 2
          failureThreshold: 3
