kubernetees/cross-node-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cross-node-test
  namespace: movie-ticket
spec:
  nodeName: ip-172-31-26-212.ap-south-1.compute.internal
  containers:
    - name: test
      image: busybox:1.36
      command:
        - sh
        - -c
        - sleep 3600
