kubernetees/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend-deployment
  namespace: movie-ticket

spec:
  replicas: 1

  selector:
    matchLabels:
      app: movie-frontend

  template:
    metadata:
      labels:
        app: movie-frontend

    spec:
      containers:
      - name: movie-frontend

        image: 703621194250.dkr.ecr.ap-south-1.amazonaws.com/movie-frontend:v3
        imagePullPolicy: Always

        ports:
        - containerPort: 3000
