kubernetees/gp3-test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: gp3-test-pod
  namespace: movie-ticket
spec:
  containers:
    - name: test
      image: busybox:1.36
      command:
        - sh
        - -c
        - "echo 'EBS CSI test successful' > /data/test.txt && sleep 3600"
      volumeMounts:
        - name: storage
          mountPath: /data

  volumes:
    - name: storage
      persistentVolumeClaim:
        claimName: gp3-test-pvc
