kubernetees/backend-service.yml
apiVersion: v1
kind: Service

metadata:
  name: backend-service
  namespace: movie-ticket

spec:
  selector:
    app: movie-backend

  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30091

  type: NodePort
