kubernetees/backend-test-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-test-service
  namespace: movie-ticket
spec:
  selector:
    app: movie-backend
  ports:
    - port: 5000
      targetPort: 9999
  type: ClusterIP
