kubernetees/frontend-service.yml
apiVersion: v1

kind: Service

metadata:
  name: frontend-service
  namespace: movie-ticket

spec:
  selector:
    app: movie-frontend

  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30090

  type: NodePort
