kubernetees/alb-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movie-ticket-alb
  namespace: movie-ticket
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb

  rules:
    - http:
        paths: 
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000

          - path: /movies
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 5000
