kubernetees/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: movie-ingress
  namespace: movie-ticket

spec:
  ingressClassName: nginx

  rules:
  - host: movie.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: frontend-service
            port:
              number: 80

      - path: /movies
        pathType: Prefix

        backend:
          service:
            name: backend-service
            port:
              number: 5000
