kubernetees/movie-ticket-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movie-ticket-ingress
  namespace: movie-ticket
spec:
  ingressClassName: nginx
  rules:
    - host: movie.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000
