kubernetees/postgres-deny-all.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-deny-all
  namespace: movie-ticket
spec:
  podSelector:
    matchLabels:
      app: postgres
  policyTypes:
    - Ingress
